去掉dubbo一些不必要的扩展，并升级spring，以及jdk，以及日志log4j2